C/sofa.h


double iauAnp(double a);

double iauAnpm(double a);


/* VectorMatrix/CopyExtendExtract */
void iauCp(double p[3], double c[3]);

void iauCpv(double pv[2][3], double c[2][3]);

void iauCr(double r[3][3], double c[3][3]);

void iauP2pv(double p[3], double pv[2][3]);


/* VectorMatrix/Initialization */
void iauIr(double r[3][3]);


/* VectorMatrix/SeparationAndAngle */
double iauPap(double a[3], double b[3]);

double iauPas(double al, double ap, double bl, double bp);


/* VectorMatrix/SphericalCartesian */
void iauC2s(double p[3], double *theta, double *phi);

void iauP2s(double p[3], double *theta, double *phi, double *r);

void iauS2c(double theta, double phi, double c[3]);


/* VectorMatrix/VectorOps */
double iauPdp(double a[3], double b[3]);

double iauPm(double p[3]);

void iauPmp(double a[3], double b[3], double amb[3]);

void iauPn(double p[3], double *r, double u[3]);

void iauPpp(double a[3], double b[3], double apb[3]);